--- a/react/blogapi/src/css/home.css
+++ b/react/blogapi/src/css/home.css
@@ -1,7 +1,7 @@
 body {
     background-image: url("../pics/back4.png");
 	background-size: cover;
-	/* background-repeat: no-repeat; */
+	background-repeat: no-repeat;
 	
 
 	margin: 0;
@@ -74,8 +74,8 @@ body {
         background: radial-gradient(circle at 50% 80%, rgba(255, 255, 255, 0), rgba(255, 255, 255, 0) 74%, white 80%, white 84%, rgba(255, 255, 255, 0) 100%); }
   
   .stage {
-    width: 250px;
-    height: 250px;
+    width: 200px;
+    height: 200px;
     display: inline-block;
     
     -webkit-perspective: 1200px;
@@ -214,8 +214,8 @@ body {
             background: radial-gradient(circle at 50% 80%, rgba(255, 255, 255, 0), rgba(255, 255, 255, 0) 74%, white 80%, white 84%, rgba(255, 255, 255, 0) 100%); }
       
       .stage2 {
-        width: 250px;
-        height: 250px;
+        width: 200px;
+        height: 200px;
         display: inline-block;
         margin-left: 100px ;
         margin-top: 10px ;
@@ -354,8 +354,8 @@ body {
             background: radial-gradient(circle at 50% 80%, rgba(255, 255, 255, 0), rgba(255, 255, 255, 0) 74%, white 80%, white 84%, rgba(255, 255, 255, 0) 100%); }
       
       .stage3 {
-        width: 250px;
-        height: 250px;
+        width: 200px;
+        height: 200px;
         display: inline-block;
         margin-left: 150px ;
         /* margin: 20px; */
@@ -493,11 +493,11 @@ body {
             background: radial-gradient(circle at 50% 80%, rgba(255, 255, 255, 0), rgba(255, 255, 255, 0) 74%, white 80%, white 84%, rgba(255, 255, 255, 0) 100%); }
       
       .stage4 {
-        width: 250px;
-        height: 250px;
+        width: 200px;
+        height: 200px;
         display: inline-block;
-        margin-left: 150px;
-        margin-top: 250px;
+        margin-left: 100px;
+        margin-top: 200px;
         -webkit-perspective: 1200px;
         -moz-perspective: 1200px;
         -ms-perspective: 1200px;
