--- a/react/blogapi/src/footer.css
+++ b/react/blogapi/src/footer.css
@@ -1,8 +1,13 @@
 li{
     list-style: none;
-    display: inline-block;
-    padding: 3%;
+    display:list-item;
+    padding: 5%;
+    
 }
 ul{
-    margin-left: 30%;
+    margin-top: -290px;
+    margin-left: 2.5%;
+    border-radius: 25px;
+   
+    width: 6%;
 }
