--- a/react/blogapi/src/css/home.css
+++ b/react/blogapi/src/css/home.css
@@ -12,7 +12,7 @@ body {
 
 .ball {
    
-   
+  
     display: inline-block;
     width: 100%;
     height: 100%;
@@ -74,8 +74,10 @@ body {
         background: radial-gradient(circle at 50% 80%, rgba(255, 255, 255, 0), rgba(255, 255, 255, 0) 74%, white 80%, white 84%, rgba(255, 255, 255, 0) 100%); }
   
   .stage {
-    width: 200px;
-    height: 200px;
+    /* background-image: url("../pics/story2.png");
+    background-repeat: no-repeat; */
+    width: 250px;
+    height: 250px;
     display: inline-block;
     
     -webkit-perspective: 1200px;
@@ -214,8 +216,8 @@ body {
             background: radial-gradient(circle at 50% 80%, rgba(255, 255, 255, 0), rgba(255, 255, 255, 0) 74%, white 80%, white 84%, rgba(255, 255, 255, 0) 100%); }
       
       .stage2 {
-        width: 200px;
-        height: 200px;
+        width: 250px;
+        height: 250px;
         display: inline-block;
         margin-left: 100px ;
         margin-top: 10px ;
@@ -354,10 +356,10 @@ body {
             background: radial-gradient(circle at 50% 80%, rgba(255, 255, 255, 0), rgba(255, 255, 255, 0) 74%, white 80%, white 84%, rgba(255, 255, 255, 0) 100%); }
       
       .stage3 {
-        width: 200px;
-        height: 200px;
+        width: 250px;
+        height: 250px;
         display: inline-block;
-        margin-left: 150px ;
+        margin-left: 200px ;
         /* margin: 20px; */
         -webkit-perspective: 1200px;
         -moz-perspective: 1200px;
@@ -493,11 +495,11 @@ body {
             background: radial-gradient(circle at 50% 80%, rgba(255, 255, 255, 0), rgba(255, 255, 255, 0) 74%, white 80%, white 84%, rgba(255, 255, 255, 0) 100%); }
       
       .stage4 {
-        width: 200px;
-        height: 200px;
+        width: 250px;
+        height: 250px;
         display: inline-block;
-        margin-left: 100px;
-        margin-top: 200px;
+        margin-left: 150px;
+        margin-top: 300px;
         -webkit-perspective: 1200px;
         -moz-perspective: 1200px;
         -ms-perspective: 1200px;
@@ -727,19 +729,25 @@ body {
 
 
     .signin{
-      height: 80px;
-      width: 200px;
+      height: 100px;
+      width: 240px;
     
-      margin-left: 2% ;
-      margin-top:2% ;
+      margin-left: 610px;
+      margin-top:0% ;
       background-color: #f72552;
       border: solid 2px  #fc2e5a;
       border-radius: 2%;
       color: white;
-      font-size: large;
+      font-size: xx-large;
+      box-shadow: 5px 5px #9DD8F7, 10px 10px #f98ebb, 15px 15px #FAF088;
     }
 
-
+    .signin:hover{
+      background-color:rgb(178, 152, 200);
+      color: black;
+      font-weight: bold;
+      border: solid 2px  rgb(178, 152, 200) ;
+    }
 .clickme{
     position: relative;
    
@@ -747,3 +755,36 @@ body {
    
 }
 
+.img1{
+  margin-left:38px;
+  margin-top:40px ;
+  border-radius: 50%;
+  width: 70%;
+  height: 70%;
+  opacity: 90%;
+}
+
+.img2{
+  margin-left:30px;
+  margin-top:20px ;
+  border-radius: 50%;
+  width: 80%;
+  height: 80%;
+  opacity: 90%;
+}
+.img3{
+  margin-left:30px;
+  margin-top:20px ;
+  border-radius: 50%;
+  width: 80%;
+  height: 80%;
+  opacity: 90%;
+}
+.img4{
+  margin-left:25px;
+  margin-top:20px ;
+  border-radius: 50%;
+  width: 80%;
+  height: 80%;
+  opacity: 80%;
+}
