--- a/react/blogapi/src/css/login.css
+++ b/react/blogapi/src/css/login.css
@@ -8,25 +8,31 @@ body {
 	padding: 0;
 }
 .formdiv{
-    width: 400px;
+     width: 400px;
+     height: 500px;
     
+   /* position: relative;*/
+    margin-top:150px ;
+    /* margin-left:50px ;  */
+    background-color: rgba(177, 70, 168, 0.329);
+    border-radius: 5%;
+    box-shadow: 5px 5px #9DD8F7, 10px 10px #f98ebb, 15px 15px #FAF088;
+    /* box-shadow: 10px 10px 8px #888888; */
+    /* box-shadow: 5px 5px 5px 5px #888888; */
     position: relative;
-    margin-top:-350px ;
-    margin-left:550px ;
-    background-color: #B298C8;
-    opacity: 70%;
-    border-radius: 15%;
-    
 }
 
-input{
+.myform{
+    padding: 15%;
+}
+/* input{
     margin-left: 20% ;
     width: 60%;
     height:40px;
     border: solid 2px #9C27B0;
-}
+} */
 
-.submit{
+/* .submit{
     margin-left: 30% ;
     width: 40%;
     height:40px;
@@ -41,4 +47,52 @@ input{
     margin-top: 30% ;
     font-size: large;
     font-weight: bold;
+} */
+
+.mybutton{
+    height: 50px;
+    width: 180px;
+    margin-top: 30px ;
+    margin-left:40px ;
+    background-color: #FAEF82;
+    border: solid 1px #FAEF82;
+    border-radius: 5%;
+    
+    box-shadow: 5px 5px #9DD8F7, 10px 10px #f98ebb;
+    
 }
+.mybutton:hover {
+    background-color: #f98ebb;
+  }
+/* .mytext{
+    border: solid 1px #FAEF82; 
+} */
+
+.s1{
+position: absolute;
+    margin-top: 60px ;
+   
+    margin-left:150px ;
+    
+}
+
+.text{
+    margin-top:80px ;
+}
+
+.text2{
+    margin-top:40px ;
+}
+.dont{
+    margin-top:15px;
+    margin-left:45px ;
+}
+
+.do{
+    margin-left:30px ;
+    margin-top:13px ;
+}
+
+/* .text3{
+
+} */
