--- a/react/blogapi/src/stories.css
+++ b/react/blogapi/src/stories.css
@@ -1,10 +1,10 @@
-
+/* 
 body{
     background-image: url('https://cdn.pixabay.com/photo/2020/02/19/07/17/background-4861540_1280.jpg'); 
     background-repeat: no-repeat;
     background-size: cover;
     background-attachment: fixed;
-}
+} */
 
 
 
