--- a/react/blogapi/src/css/footer.css
+++ b/react/blogapi/src/css/footer.css
@@ -10,7 +10,7 @@ body {
     z-index: 1;
     top: 0;
     left: 0;
-    background-color:  #f98eba91;
+    background-color:  #9dd8f7b4;
     overflow-x: hidden;
     padding-top: 20px;
   }
@@ -21,16 +21,21 @@ body {
     font-size: 25px;
     color: #000000;
     display: block;
+    margin-top: 40%;
+    margin-left: 10%;
+    background-color:#f98eba91 ;
+    width: 150px;
+    height: 55px;
+    box-shadow: 5px 5px #9DD8F7, 10px 10px #f98ebb, 15px 15px #FAF088;
+    
+    
   }
   
   .sidenav a:hover {
     color: #f1f1f1;
   }
   
-  .main {
-    margin-left: 200px; /* Same as the width of the sidenav */
-  }
-  
+
   
   .balll {
    
