--- a/react/blogapi/src/css/nav.css
+++ b/react/blogapi/src/css/nav.css
@@ -1,7 +1,7 @@
 
-body {
+/* body {
   font-family: "Lato", sans-serif;
-}
+} */
 
 .sidenav2 {
   height: 100%;
@@ -14,6 +14,7 @@ body {
   overflow-x: hidden;
   padding-top: 20px;
   margin-left: 500px;
+  font-family: 'Potta One', cursive;
 }
 
 .sidenav2 a {
@@ -30,6 +31,7 @@ body {
     text-align: center;
     padding: 20%;
     box-shadow: 5px 5px #9DD8F7, 10px 10px #f98ebb, 15px 15px #FAF088;
+    font-family: 'Potta One', cursive;
 }
 
 .sidenav2 a:hover {
