--- a/react/blogapi/src/css/home.css
+++ b/react/blogapi/src/css/home.css
@@ -1,5 +1,5 @@
 body {
-    background-image: url("../pics/back4.png");
+    background-image: url("../pics/back13.png");
 	background-size: cover;
   background-repeat: no-repeat;
   
@@ -736,8 +736,8 @@ body {
     
       margin-left: 610px;
       margin-top:0% ;
-      background-color: #f72552;
-      border: solid 2px  #fc2e5a;
+      background-color: #F195BE;
+      border: solid 2px  #F195BE;
       border-radius: 2%;
       color: white;
       font-size: xx-large;
