--- a/react/blogapi/src/css/login.css
+++ b/react/blogapi/src/css/login.css
@@ -96,3 +96,16 @@ position: absolute;
 /* .text3{
 
 } */
+
+/* .signin-main{
+    background-image: url("../pics/signback.png");  
+    background-size: cover;
+    background-repeat: no-repeat;
+    margin-top: 0%;
+} */
+
+
+/* .mymaincon{
+    width: 500px;
+    height: 500px;
+} */
