--- a/react/blogapi/src/css/footer.css
+++ b/react/blogapi/src/css/footer.css
@@ -1,172 +1,313 @@
-
 /* body {
+    padding: 0;
+    margin: 0;
+    background: #596778;
+    color: #EEEEEE;
+    text-align: center;
     font-family: "Lato", sans-serif;
-  } */
-  
-  .sidenav {
-    height: 100%;
-    width: 200px;
-    position: fixed;
-    z-index: 1;
-    top: 0;
-    left: 0;
-    background-color:  #9dd8f7b4;
-    overflow-x: hidden;
-    padding-top: 20px;
-    font-family: 'Potta One', cursive;
-  }
-  
-  .sidenav a {
-    padding: 6px 6px 6px 32px;
-    text-decoration: none;
-    font-size: 25px;
-    color: #000000;
-    display: block;
-    margin-top: 40%;
-    margin-left: 10%;
-    background-color:#f98eba91 ;
-    width: 150px;
-    height: 55px;
-    box-shadow: 5px 5px #9DD8F7, 10px 10px #f98ebb, 15px 15px #FAF088;
-    font-family: 'Potta One', cursive;
-    
-    
-  }
-  
-  .sidenav a:hover {
-    color: #f1f1f1;
-  }
-  
-
-  
-  .balll {
-   
-  
-    display: inline-block;
-    width: 100%;
-    height: 100%;
+ } */
+ 
+ @media screen and (max-width: 700px) {
+    /* body {
+       padding: 170px 0 0 0;
+       width: 100%
+    }
+ }
+ 
+ a {
+    color: inherit; */
+ }
+ 
+ .menu-item,
+ .menu-open-button {
+    background: #A38BB7;
     border-radius: 100%;
-    /* position: relative; */
-    background: radial-gradient(circle at bottom, #81e8f6, #76deef 10%, #055194 80%, #062745 100%); }
-    .balll:before {
-      content: "";
-      position: absolute;
-      top: 1%;
-      left: 5%;
-      width: 90%;
-      height: 90%;
-      border-radius: 100%;
-      background: radial-gradient(circle at top, white, rgba(255, 255, 255, 0) 58%);
-      -webkit-filter: blur(5px);
-      filter: blur(5px);
-      z-index: 2; }
-    .balll:after {
-      content: "";
-      position: absolute;
-      display: none;
-      top: 5%;
-      left: 10%;
-      width: 80%;
-      height: 80%;
-      border-radius: 100%;
-      -webkit-filter: blur(1px);
-      filter: blur(1px);
-      z-index: 2;
-      -webkit-transform: rotateZ(-30deg);
-      transform: rotateZ(-30deg); }
-    .balll .shadow {
-      position: absolute;
-      width: 100%;
-      height: 100%;
-      background: radial-gradient(circle, rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.1) 40%, rgba(0, 0, 0, 0) 50%);
-      -webkit-transform: rotateX(90deg) translateZ(-160px);
-      transform: rotateX(90deg) translateZ(-160px);
-      z-index: 1; }
-    .balll.plain {
-      background: black; }
-      .balll.plain:before, .ball.plain:after {
-        display: none; }
-    .balll.bubble {
-      background: radial-gradient(circle at 50% 55%, rgba(240, 245, 255, 0.9), rgba(240, 245, 255, 0.9) 40%, rgba(225, 238, 255, 0.8) 60%, rgba(43, 130, 255, 0.4));
-      -webkit-animation: bubble-anim 2s ease-out infinite;
-      animation: bubble-anim 2s ease-out infinite; }
-      .balll.bubble:before {
-        -webkit-filter: blur(0);
-        filter: blur(0);
-        height: 80%;
-        width: 40%;
-        background: radial-gradient(circle at 130% 130%, rgba(255, 255, 255, 0) 0, rgba(255, 255, 255, 0) 46%, rgba(255, 255, 255, 0.8) 50%, rgba(255, 255, 255, 0.8) 58%, rgba(255, 255, 255, 0) 60%, rgba(255, 255, 255, 0) 100%);
-        -webkit-transform: translateX(131%) translateY(58%) rotateZ(168deg) rotateX(10deg);
-        transform: translateX(131%) translateY(58%) rotateZ(168deg) rotateX(10deg); }
-      .balll.bubble:after {
-        display: block;
-        background: radial-gradient(circle at 50% 80%, rgba(255, 255, 255, 0), rgba(255, 255, 255, 0) 74%, white 80%, white 84%, rgba(255, 255, 255, 0) 100%); }
-  
-  .stagee {
-    /* background-image: url("../pics/story2.png");
-    background-repeat: no-repeat; */
-    width: 250px;
-    height: 250px;
-    display: inline-block;
+    width: 80px;
+    height: 80px;
+    margin-left: -40px;
+    position: absolute;
+    color: #3a3131;
+    text-align: center;
+    line-height: 80px;
+    -webkit-transform: translate3d(0, 0, 0);
+    transform: translate3d(0, 0, 0);
+    -webkit-transition: -webkit-transform ease-out 200ms;
+    transition: -webkit-transform ease-out 200ms;
+    transition: transform ease-out 200ms;
+    transition: transform ease-out 200ms, -webkit-transform ease-out 200ms;
     
-    -webkit-perspective: 1200px;
-    -moz-perspective: 1200px;
-    -ms-perspective: 1200px;
-    -o-perspective: 1200px;
-    perspective: 1200px;
-    -webkit-perspective-origin: 50% 50%;
-    -moz-perspective-origin: 50% 50%;
-    -ms-perspective-origin: 50% 50%;
-    -o-perspective-origin: 50% 50%;
-    perspective-origin: 50% 50%;
-  }
+ }
+ 
+ .menu-open {
+    display: none;
+ }
+ 
+ .lines {
+    width: 25px;
+    height: 3px;
+    background: #596778;
+    display: block;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    margin-left: -12.5px;
+    margin-top: -1.5px;
+    -webkit-transition: -webkit-transform 200ms;
+    transition: -webkit-transform 200ms;
+    transition: transform 200ms;
+    transition: transform 200ms, -webkit-transform 200ms;
+ }
+ 
+ .line-1 {
+    -webkit-transform: translate3d(0, -8px, 0);
+    transform: translate3d(0, -8px, 0);
+ }
+ 
+ .line-2 {
+    -webkit-transform: translate3d(0, 0, 0);
+    transform: translate3d(0, 0, 0);
+ }
+ 
+ .line-3 {
+    -webkit-transform: translate3d(0, 8px, 0);
+    transform: translate3d(0, 8px, 0);
+ }
+ 
+ .menu-open:checked + .menu-open-button .line-1 {
+    -webkit-transform: translate3d(0, 0, 0) rotate(45deg);
+    transform: translate3d(0, 0, 0) rotate(45deg);
+ }
+ 
+ .menu-open:checked + .menu-open-button .line-2 {
+    -webkit-transform: translate3d(0, 0, 0) scale(0.1, 1);
+    transform: translate3d(0, 0, 0) scale(0.1, 1);
+ }
+ 
+ .menu-open:checked + .menu-open-button .line-3 {
+    -webkit-transform: translate3d(0, 0, 0) rotate(-45deg);
+    transform: translate3d(0, 0, 0) rotate(-45deg);
+ }
+ 
+ .menu {
+    /* margin: auto; */
+    /* position: absolute; */
+    top:0;
+    bottom: 0;
+    left: 0;
+    right: 100;
+    /* width: 80px;
+    height: 80px; */
+    text-align: center;
+    box-sizing: border-box;
+    font-size: 15px;
+    font-weight: bold;
+    text-decoration: none;
+    
+ }
+ 
+ 
+ /* .menu-item {
+    transition: all 0.1s ease 0s;
+ } */
+ 
+ .menu-item:hover {
+    background: #EEEEEE;
+    color: #3290B1;
+ }
+ 
+ .menu-item:nth-child(3) {
+    -webkit-transition-duration: 180ms;
+    transition-duration: 180ms;
+ }
+ 
+ .menu-item:nth-child(4) {
+    -webkit-transition-duration: 180ms;
+    transition-duration: 180ms;
+ }
+ 
+ .menu-item:nth-child(5) {
+    -webkit-transition-duration: 180ms;
+    transition-duration: 180ms;
+ }
+ 
+ .menu-item:nth-child(6) {
+    -webkit-transition-duration: 180ms;
+    transition-duration: 180ms;
+ }
+ 
+ .menu-item:nth-child(7) {
+    -webkit-transition-duration: 180ms;
+    transition-duration: 180ms;
+ }
+ 
+ .menu-item:nth-child(8) {
+    -webkit-transition-duration: 180ms;
+    transition-duration: 180ms;
+ }
+ 
+ .menu-item:nth-child(9) {
+    -webkit-transition-duration: 180ms;
+    transition-duration: 180ms;
+ }
+ 
+ .menu-open-button {
+    z-index: 2;
+    -webkit-transition-timing-function: cubic-bezier(0.175, 0.885, 0.32, 1.275);
+    transition-timing-function: cubic-bezier(0.175, 0.885, 0.32, 1.275);
+    -webkit-transition-duration: 400ms;
+    transition-duration: 400ms;
+    -webkit-transform: scale(1.1, 1.1) translate3d(0, 0, 0);
+    transform: scale(1.1, 1.1) translate3d(0, 0, 0);
+    cursor: pointer;
+    box-shadow: 3px 3px 3px  #9DD8F7;
+ }
+ 
+ .menu-open-button:hover {
+    -webkit-transform: scale(1.2, 1.2) translate3d(0, 0, 0);
+    transform: scale(1.2, 1.2) translate3d(0, 0, 0);
+ }
+ 
+ .menu-open:checked + .menu-open-button {
+    -webkit-transition-timing-function: linear;
+    transition-timing-function: linear;
+    -webkit-transition-duration: 200ms;
+    transition-duration: 200ms;
+    -webkit-transform: scale(0.8, 0.8) translate3d(0, 0, 0);
+    transform: scale(0.8, 0.8) translate3d(0, 0, 0);
+ }
+ 
+ .menu-open:checked ~ .menu-item {
+    -webkit-transition-timing-function: cubic-bezier(0.935, 0, 0.34, 1.33);
+    transition-timing-function: cubic-bezier(0.935, 0, 0.34, 1.33);
+ }
+ 
+ .menu-open:checked ~ .menu-item:nth-child(3) {
+    transition-duration: 180ms;
+    -webkit-transition-duration: 180ms;
+    -webkit-transform: translate3d(0.08361px, -104.99997px, 0);
+    transform: translate3d(0.08361px, -104.99997px, 0);
+ }
+ 
+ .menu-open:checked ~ .menu-item:nth-child(4) {
+    transition-duration: 280ms;
+    -webkit-transition-duration: 280ms;
+    -webkit-transform: translate3d(90.9466px, -52.47586px, 0);
+    transform: translate3d(90.9466px, -52.47586px, 0);
+ }
+ 
+ .menu-open:checked ~ .menu-item:nth-child(5) {
+    transition-duration: 380ms;
+    -webkit-transition-duration: 380ms;
+    -webkit-transform: translate3d(90.9466px, 52.47586px, 0);
+    transform: translate3d(90.9466px, 52.47586px, 0);
+ }
+ 
+ .menu-open:checked ~ .menu-item:nth-child(6) {
+    transition-duration: 480ms;
+    -webkit-transition-duration: 480ms;
+    -webkit-transform: translate3d(0.08361px, 104.99997px, 0);
+    transform: translate3d(0.08361px, 104.99997px, 0);
+ }
+ 
+ .menu-open:checked ~ .menu-item:nth-child(7) {
+    transition-duration: 580ms;
+    -webkit-transition-duration: 580ms;
+    -webkit-transform: translate3d(-90.86291px, 52.62064px, 0);
+    transform: translate3d(-90.86291px, 52.62064px, 0);
+ }
+ 
+ .menu-open:checked ~ .menu-item:nth-child(8) {
+    transition-duration: 680ms;
+    -webkit-transition-duration: 680ms;
+    -webkit-transform: translate3d(-91.03006px, -52.33095px, 0);
+    transform: translate3d(-91.03006px, -52.33095px, 0);
+ }
+ 
+ .menu-open:checked ~ .menu-item:nth-child(9) {
+    transition-duration: 780ms;
+    -webkit-transition-duration: 780ms;
+    -webkit-transform: translate3d(-0.25084px, -104.9997px, 0);
+    transform: translate3d(-0.25084px, -104.9997px, 0);
+ }
+ 
+ .blue {
+    background-color: #669AE1;
+    box-shadow: 3px 3px 0 0 rgba(0, 0, 0, 0.14);
+    text-shadow: 1px 1px 0 rgba(0, 0, 0, 0.12);
+ }
+ 
+ .blue:hover {
+    color: #669AE1;
+    text-shadow: none;
+ }
+ 
+ .green {
+    background-color: #70CC72;
+    box-shadow: 3px 3px 0 0 rgba(0, 0, 0, 0.14);
+    text-shadow: 1px 1px 0 rgba(0, 0, 0, 0.12);
+ }
+ 
+ .green:hover {
+    color: #70CC72;
+    text-shadow: none;
+ }
+ 
+ .red {
+    background-color: #F196BF;
+    box-shadow: 3px 3px 0 0 rgba(0, 0, 0, 0.14);
+    text-shadow: 1px 1px 0 rgba(0, 0, 0, 0.12);
+ }
+ 
+ .red:hover {
+    color: #FE4365;
+    text-shadow: none;
+ }
+ 
+ .purple {
+    background-color: #FAEF82;
+    box-shadow: 3px 3px 0 0 rgba(0, 0, 0, 0.14);
+    text-shadow: 1px 1px 0 rgba(0, 0, 0, 0.12);
+ }
+ 
+ .purple:hover {
+    color: #C49CDE;
+    text-shadow: none;
+ }
+ 
+ .orange {
+    background-color: #F49B72;
+    box-shadow: 3px 3px 0 0 rgba(0, 0, 0, 0.14);
+    text-shadow: 1px 1px 0 rgba(0, 0, 0, 0.12);
+ }
+ 
+ .orange:hover {
+    color: #FC913A;
+    text-shadow: none;
+ }
+ 
 
-  @-webkit-keyframes bubble-anim {
-    0% {
-      -webkit-transform: scale(1);
-      transform: scale(1); }
-  
-    20% {
-      -webkit-transform: scaleY(0.95) scaleX(1.05);
-      transform: scaleY(0.95) scaleX(1.05); }
-  
-    48% {
-      -webkit-transform: scaleY(1.1) scaleX(0.9);
-      transform: scaleY(1.1) scaleX(0.9); }
-  
-    68% {
-      -webkit-transform: scaleY(0.98) scaleX(1.02);
-      transform: scaleY(0.98) scaleX(1.02); }
-  
-    80% {
-      -webkit-transform: scaleY(1.02) scaleX(0.98);
-      transform: scaleY(1.02) scaleX(0.98); }
-  
-    97%, 100% {
-      -webkit-transform: scale(1);
-      transform: scale(1); } }
-  
-  @keyframes bubble-anim {
-    0% {
-      -webkit-transform: scale(1);
-      transform: scale(1); }
-  
-    20% {
-      -webkit-transform: scaleY(0.95) scaleX(1.05);
-      transform: scaleY(0.95) scaleX(1.05); }
-  
-    48% {
-      -webkit-transform: scaleY(1.1) scaleX(0.9);
-      transform: scaleY(1.1) scaleX(0.9); }
-  
-    68% {
-      -webkit-transform: scaleY(0.98) scaleX(1.02);
-      transform: scaleY(0.98) scaleX(1.02); }
-  
-    80% {
-      -webkit-transform: scaleY(1.02) scaleX(0.98);
-      transform: scaleY(1.02) scaleX(0.98); }
-  
-    97%, 100% {
-      -webkit-transform: scale(1);
-      transform: scale(1); } }
+ 
+ .credit {
+    margin: 24px 20px 120px 0;
+    text-align: right;
+    color: #EEEEEE;
+ }
+ 
+ .credit a {
+    padding: 8px 0;
+    color: #C49CDE;
+    text-decoration: none;
+    transition: all 0.3s ease 0s;
+ }
+ 
+ .credit a:hover {
+    text-decoration: underline;
+ }
+
+ .menucontainer{
+     margin-top: 100px ;
+     margin-left: -1400px;
+     position: relative;
+     
+ }
+
