--- a/react/blogapi/src/css/games.css
+++ b/react/blogapi/src/css/games.css
@@ -43,7 +43,7 @@
     height: 220px;
     display: inline-block;
 
-    margin-top: 130px; 
+    margin-top: -80px; 
     margin-left: 370px;
     -webkit-perspective: 1200px;
     -moz-perspective: 1200px;
@@ -100,9 +100,9 @@ z-index: -1;
   height: 220px;
   /* display: inline-block; */
 
-  position: relative;
+  /* position: relative; */
   margin-left: 865px;
-  margin-top: 250px;
+  margin-top: 350px;
   -webkit-perspective: 1200px;
   -moz-perspective: 1200px;
   -ms-perspective: 1200px;
@@ -113,4 +113,19 @@ z-index: -1;
   -ms-perspective-origin: 50% 50%;
   -o-perspective-origin: 50% 50%;
   perspective-origin: 50% 50%;
+}
+
+
+.imgxo{
+  z-index: 2;
+  margin-left: -195px;
+  margin-top: -100px;
+}
+
+.imgpiano{
+  z-index: 5;
+  margin-left: -85px;
+  margin-top: 5px;
+  width: 400px;
+  height: 250px;
 }
