--- a/react/blogapi/src/App.css
+++ b/react/blogapi/src/App.css
@@ -10,25 +10,32 @@
   flex-direction: column;
   justify-content: center;
   background: #444;
+  /* border: 4px solid black; */
 }
 
 .piano-container {
   display: inline-flex;
-  margin-top: 350px;
-  margin-left: 90px;
+  margin-top: 300px;
+  margin-left: 350px;
 
-  /* border-top: 10px solid rgb(3, 3, 10); */
+  border-top: 5px solid rgb(3, 3, 10);
+  border-right: 5px solid rgb(3, 3, 10);
+  border-left: 5px solid rgb(3, 3, 10);
+  border-collapse: collapse;
+  box-shadow: 5px 10px 18px #888888;
 }
 
 .piano-natural-key {
-  width: 60px;
-  height: 250px;
+  width: 50px;
+  height: 300px;
   cursor: pointer;
-  background: #fafafa;
+  background: #fcdeeb;
+  border: solid 3px #472f3a;
   margin: 0 2px;
   color: #444;
   padding: 10px;
   border-radius: 0 0 3px 3px;
+  border-bottom: 5px solid rgb(3, 3, 10);
 }
 
 .piano-text {
@@ -52,10 +59,10 @@
 .piano-accidental-key {
   position: absolute;
   cursor: pointer;
-  background: #444;
+  background: rgb(17, 17, 17);
   transform: translateX(-50%);
-  width: 36px;
-  height: 150px;
+  width: 30px;
+  height: 170px;
   border-radius: 0 0 3px 3px;
   border : 3px solid #444;
   border-top: none;
