--- a/react/blogapi/src/css/nav2.css
+++ b/react/blogapi/src/css/nav2.css
@@ -18,7 +18,7 @@
  margin-top: 0;
  cursor: pointer;
  width: 100%;
- background: #78FED6;
+ background: #62dbeb;
  border-radius: 10px;
  font-family: Century Gothic;
  letter-spacing: 5px;
